<resources>
    <string name="app_name">Lendy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must contain at least 8 characters.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_acc">Create Account</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="lendyText">Lendy</string>
    <string name="app_home_name">Lendy</string>
    <string name="title_home">Home</string>
    <string name="title_bookshelf">Bookshelf</string>
    <string name="title_proflie">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
    <string name="about_descrip">About this app ...</string>
    <string name="about">About Lendy</string>

=======
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>

    <string name="book_title">Book Title</string>
    <string name="book_des">Book Description Title</string>
    <string name="Book">Book</string>
<<<<<<< HEAD
    <string name="Setting">Setting</string>
    <string name="About">About</string>
    <string name="sort_by">Sort By</string>
    <string name="ranking">Ranking</string>
    <string name="hot">Hot</string>
    <string name="category">Category</string>
    <string name="new_">New</string>
=======
>>>>>>> 9a30ec61a6ab078901badef8176b4958b2a3c9bf
>>>>>>> 6a0eecd9212fce83a296dbfef9e350a36d30c2c2
</resources>